--- a/index.html
+++ b/index.html
@@ -6,67 +6,6 @@
 <title>ChadiliZe — Telegram Mini App</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <style>
-/* Home badge (middle tile) */
-.level-badge{
-  width:100%;
-  aspect-ratio:1/1;
-  display:block;
-  border-radius:12px;
-  object-fit:cover;
-  border:1px solid rgba(255,255,255,.08);
-  box-shadow: inset 0 1px 0 rgba(255,255,255,.06);
-}
-.level-badge.glow{
-  box-shadow:
-    0 0 0 2px rgba(220,235,255,.45),
-    0 0 18px rgba(140,190,255,.55),
-    0 0 42px rgba(140,190,255,.35);
-}
-
-/* Levels modal grid/cards */
-.levels-grid{ display:grid; grid-template-columns:1fr 1fr; gap:12px; }
-@media (min-width:520px){ .levels-grid{ grid-template-columns:1fr 1fr 1fr; } }
-
-.level-card{
-  background:#0f0f0f; border:2px solid #2b2b2b; border-radius:12px;
-  padding:10px; display:grid; gap:8px;
-}
-.level-thumb{
-  position:relative; aspect-ratio:1/1; overflow:hidden; border-radius:10px;
-  border:1px solid rgba(255,255,255,.08);
-}
-.level-thumb img{ width:100%; height:100%; object-fit:cover; display:block; }
-
-/* Locked = greyscale image + centered colored lock */
-.level-card.locked .level-thumb img{ filter: grayscale(100%) brightness(.74); }
-.level-lock{
-  position:absolute; inset:0; display:flex; align-items:center; justify-content:center; pointer-events:none;
-}
-.level-lock img{ width:46%; height:auto; opacity:.95; }
-
-.level-head{ display:flex; justify-content:space-between; align-items:center; }
-.level-name{ font-weight:900; }
-.level-status{ font-weight:900; color:#9ee081; }
-.level-card.locked .level-status{ color:#ff8b8b; }
-
-.level-reqs{ font-size:12px; color:#9aa3ab; line-height:1.35; }
-.level-achs{ font-size:12px; color:#e7f2ff; font-weight:800; }
-
-/* Level-up modal visuals */
-.levelup-panel{ display:grid; gap:14px; justify-items:center; text-align:center; }
-.levelup-imgwrap{ width:min(360px, 80vw); aspect-ratio:1/1; border-radius:14px; overflow:hidden; }
-.levelup-imgwrap img{ width:100%; height:100%; object-fit:cover; display:block; }
-.levelup-title{ font-weight:900; margin:6px 0 0; }
-
-/* Blue glowing OK button */
-.btn-blueglow{
-  padding:12px 16px; border-radius:14px; border:0; cursor:pointer;
-  font-weight:900; letter-spacing:.2px; color:#eaf1ff;
-  background:linear-gradient(180deg,#2c6cf0,#244ec9);
-  box-shadow: 0 0 0 2px rgba(120,160,255,.35), 0 10px 26px rgba(40,80,220,.55), inset 0 1px 0 rgba(255,255,255,.25);
-}
-.btn-blueglow:active{ transform: translateY(1px); }
-
 /* ===== Overlay + HUD ================================================= */
 .tt-overlay{
   position:fixed; inset:0; display:none; z-index:9999; background:#000;
@@ -1337,9 +1276,7 @@ canvas{ display:block }
     <div class="bottom" id="bottom">
       <div class="controls">
         <div class="tile play" id="playBtn">Play<br>Games</div>
-        <div class="tile level" id="levelBtn" aria-haspopup="dialog" aria-controls="levelsModal" title="View levels">
-  <img id="levelBadge" class="level-badge glow" src="img/level1.png" alt="Level 1 badge" loading="lazy">
-</div>
+        <div class="tile level" id="levelBtn"><div><div style="font-size:12px;color:#9aa3ab">Level</div><div id="levelText" style="font-weight:900;font-size:18px">OFF</div></div></div>
         <div class="tile buy" id="buyBtn">Buy<br>Cards</div>
       </div>
     </div>
@@ -1505,30 +1442,7 @@ canvas{ display:block }
       </div>
     </div>
 
-<!-- LEVELS MODAL -->
-<div class="overlay" id="levelsModal" role="dialog" aria-modal="true" aria-labelledby="levelsTitle" aria-hidden="true">
-  <div class="panel">
-    <div class="row">
-      <h2 id="levelsTitle">Levels</h2>
-      <button class="tile level" style="padding:8px 12px" id="levelsClose">Close</button>
-    </div>
-    <div class="row" style="gap:12px">
-      <div class="note">Unlock levels to change the badge on the home screen. Requirements & rewards are shown under each image.</div>
-    </div>
-    <div id="levelsGrid" class="levels-grid"></div>
-  </div>
-</div>
 
-<!-- LEVEL-UP (Congrats) MODAL -->
-<div class="overlay" id="levelUpModal" role="dialog" aria-modal="true" aria-labelledby="levelUpTitle" aria-hidden="true">
-  <div class="panel levelup-panel">
-    <div class="levelup-imgwrap">
-      <img id="levelUpImg" alt="Level chest">
-    </div>
-    <h3 id="levelUpTitle" class="levelup-title">Congrats, You Have Reached Level X 🎉</h3>
-    <button id="levelUpOk" class="btn btn-blueglow" aria-label="Close">OK</button>
-  </div>
-</div>
 
     <!-- SNAKE Modal -->
     <div class="overlay" id="snakeModal">
@@ -3010,246 +2924,7 @@ function buildGrid(container, cols, rows){
   });
 })();
 
-(() => {
-  /*** ---------- CONFIG ---------- ***/
-  const TOTAL = 19;
-  const imgLevel = (n) => `img/level${n}.png`;
-  const imgChest = (n) => `img/chest${n}.png`; // chest2..chest19
-  const STORAGE = 'levels.v1';
 
-  // Requirements + tap reward (tap is the total per tap for that level).
-  // Level 1 = base (1). Levels unlock when BOTH chads and gen/hr meet/exceed.
-  const LEVELS = [
-    { id:1,  chads:0,             gen:0,           tap:1 },
-    { id:2,  chads:5_000,         gen:100,         tap:3 },
-    { id:3,  chads:20_000,        gen:1_000,       tap:9 },
-    { id:4,  chads:30_000,        gen:4_000,       tap:20 },
-    { id:5,  chads:60_000,        gen:8_000,       tap:60 },
-    { id:6,  chads:120_000,       gen:14_000,      tap:120 },
-    { id:7,  chads:300_000,       gen:25_000,      tap:200 },
-    { id:8,  chads:600_000,       gen:45_000,      tap:300 },
-    { id:9,  chads:1_000_000,     gen:60_000,      tap:400 },
-    { id:10, chads:1_300_000,     gen:80_000,      tap:600 },
-    { id:11, chads:3_000_000,     gen:190_000,     tap:700 },
-    { id:12, chads:10_000_000,    gen:600_000,     tap:1_000 },
-    { id:13, chads:90_000_000,    gen:4_000_000,   tap:4_000 },
-    { id:14, chads:40_000_000,    gen:8_000_000,   tap:5_000 },
-    { id:15, chads:100_000_000,   gen:16_000_000,  tap:8_000 },
-    { id:16, chads:1_000_000_000, gen:23_000_000,  tap:10_000 },
-    { id:17, chads:12_000_000_000,gen:40_000_000,  tap:40_000 },
-    { id:18, chads:80_000_000_000,gen:100_000_000, tap:60_000 },
-    { id:19, chads:100_000_000_000, gen:300_000_000, tap:120_000 },
-  ];
-
-  /*** ---------- DOM ---------- ***/
-  const $ = (id) => document.getElementById(id);
-  const badge  = $('levelBadge');
-  const btn    = $('levelBtn');
-  const grid   = $('levelsGrid');
-  const modal  = $('levelsModal');
-  const close  = $('levelsClose');
-  const luModal= $('levelUpModal');
-  const luImg  = $('levelUpImg');
-  const luTitle= $('levelUpTitle');
-  const luOk   = $('levelUpOk');
-  const orbEl  = $('orb'); // existing orb button
-
-  /*** ---------- HELPERS ---------- ***/
-  const readInt = (el) => {
-    if (!el) return 0;
-    const t = el.textContent.replace(/[,\s]/g,'').trim();
-    const n = parseInt(t,10);
-    return Number.isFinite(n) ? n : 0;
-  };
-  const fmt = (n) => n.toLocaleString();
-
-  const getStats = () => ({
-    chads:   readInt($('chadCount')),
-    genRate: readInt($('genRate')),
-  });
-
-  /*** ---------- STATE ---------- ***/
-  const state = {
-    unlocked: Array(TOTAL).fill(false),
-    current: 1,            // highest unlocked
-    lastShownChest: 0      // avoid re-showing old chest popups
-  };
-
-  function save(){ localStorage.setItem(STORAGE, JSON.stringify(state)); }
-  function load(){
-    try{
-      const raw = localStorage.getItem(STORAGE);
-      if (!raw) return;
-      const s = JSON.parse(raw);
-      if (Array.isArray(s.unlocked)) state.unlocked = s.unlocked.slice(0,TOTAL).map(Boolean);
-      if (typeof s.current === 'number') state.current = Math.max(1, Math.min(TOTAL, s.current));
-      if (typeof s.lastShownChest === 'number') state.lastShownChest = s.lastShownChest;
-    }catch{}
-  }
-
-  /*** ---------- UI BUILD ---------- ***/
-  function updateBadge(){
-    const cur = state.current;
-    badge.src = imgLevel(cur);
-    badge.alt = `Level ${cur} badge`;
-  }
-
-  function buildGrid(){
-    grid.innerHTML = '';
-    for (let i=1;i<=TOTAL;i++){
-      const unlocked = !!state.unlocked[i-1];
-      const cfg = LEVELS[i-1];
-      const card = document.createElement('div');
-      card.className = `level-card${unlocked ? '' : ' locked'}`;
-      const reqText = i===1
-        ? 'Starting level'
-        : `Reach ${fmt(cfg.chads)} CHADs AND ${fmt(cfg.gen)} generation/hr`;
-      const rewardText = i===1 ? '—' : `+${fmt(cfg.tap)} chad tap`;
-
-      card.innerHTML = `
-        <div class="level-thumb">
-          <img src="${imgLevel(i)}" alt="Level ${i}">
-          ${unlocked ? '' : `<div class="level-lock"><img src="img/lock.png" alt=""></div>`}
-        </div>
-        <div class="level-head">
-          <div class="level-name">Level ${i}</div>
-          <div class="level-status">${unlocked ? 'Unlocked' : 'Locked'}</div>
-        </div>
-        <div class="level-reqs">${reqText}</div>
-        <div class="level-achs">Reward: ${rewardText}</div>
-      `;
-
-      // Home tile must always show latest unlocked -> no manual override
-      grid.appendChild(card);
-    }
-  }
-
-  /*** ---------- UNLOCK LOGIC ---------- ***/
-  function highestUnlockedIndex(){
-    for (let i=TOTAL-1;i>=0;i--) if (state.unlocked[i]) return i;
-    return 0;
-  }
-
-  function checkUnlocks(){
-    const s = getStats();
-    const newly = [];
-    for (let i=0;i<TOTAL;i++){
-      if (!state.unlocked[i]){
-        const cfg = LEVELS[i];
-        if (s.chads >= cfg.chads && s.genRate >= cfg.gen){
-          state.unlocked[i] = true;
-          newly.push(i+1);
-        }
-      }
-    }
-    if (newly.length){
-      state.current = highestUnlockedIndex() + 1;
-      updateBadge(); buildGrid(); save();
-
-      // also mirror into your existing app state if present
-      if (window.state && typeof window.state.level === 'number'){
-        window.state.level = state.current;
-        if (window.saveStateLocal) try{ window.saveStateLocal(window.state); }catch{}
-      }
-
-      // show chest for the highest level just unlocked
-      const lv = Math.max(...newly);
-      showLevelUp(lv);
-    }
-  }
-
-  /*** ---------- OBSERVE COUNTERS ---------- ***/
-  function observeCounters(){
-    const targets = ['chadCount','genRate'].map($).filter(Boolean);
-    const obs = new MutationObserver(() => checkUnlocks());
-    targets.forEach(el => obs.observe(el, {childList:true, characterData:true, subtree:true}));
-  }
-
-  /*** ---------- MODALS ---------- ***/
-  let lastFocusBtn = null;
-  function openLevels(){
-    lastFocusBtn = document.activeElement;
-    buildGrid();
-    modal.classList.add('show'); modal.setAttribute('aria-hidden','false');
-    close.focus();
-    const trap = (e) => {
-      if (e.key === 'Escape') closeLevels();
-      if (e.key !== 'Tab') return;
-      const focusables = modal.querySelectorAll('button,[href],[tabindex]:not([tabindex="-1"])');
-      const list = Array.from(focusables).filter(el => el.offsetParent !== null);
-      if (!list.length) return;
-      const first = list[0], last = list[list.length-1];
-      if (e.shiftKey && document.activeElement === first){ last.focus(); e.preventDefault(); }
-      else if (!e.shiftKey && document.activeElement === last){ first.focus(); e.preventDefault(); }
-    };
-    modal._trap = trap;
-    modal.addEventListener('keydown', trap);
-  }
-  function closeLevels(){
-    modal.classList.remove('show'); modal.setAttribute('aria-hidden','true');
-    if (modal._trap){ modal.removeEventListener('keydown', modal._trap); modal._trap=null; }
-    lastFocusBtn?.focus?.();
-  }
-
-  function showLevelUp(levelNum){
-    if (state.lastShownChest >= levelNum) return; // show once
-    state.lastShownChest = levelNum; save();
-
-    const chestN = Math.max(2, Math.min(levelNum, 19)); // chest2..chest19
-    luImg.src = imgChest(chestN);
-    luImg.alt = `Level ${levelNum} chest`;
-    luTitle.textContent = `Congrats, You Have Reached Level ${levelNum} 🎉`;
-
-    luModal.classList.add('show');
-    luModal.setAttribute('aria-hidden','false');
-    luOk.focus();
-  }
-  function closeLevelUp(){
-    luModal.classList.remove('show');
-    luModal.setAttribute('aria-hidden','true');
-  }
-
-  /*** ---------- TAP POWER (adds bonus on top of your app’s +1) ---------- ***/
-  function currentTapValue(){
-    const idx = highestUnlockedIndex();
-    return LEVELS[idx].tap || 1;
-  }
-  function addTapBonusOnce(){
-    if (!orbEl || orbEl.dataset.tapBonusWired === '1') return;
-    orbEl.dataset.tapBonusWired = '1';
-    orbEl.addEventListener('click', () => {
-      const want = currentTapValue();
-      const bonus = Math.max(0, want - 1); // your app already adds +1
-      const cnt = $('chadCount');
-      if (!cnt || bonus === 0) return;
-      const v = readInt(cnt) + bonus;
-      cnt.textContent = v.toLocaleString();
-    });
-  }
-
-  /*** ---------- INIT ---------- ***/
-  function init(){
-    load();
-    // ensure level 1 unlocked
-    if (!state.unlocked.some(Boolean)) state.unlocked[0] = true;
-    state.current = highestUnlockedIndex() + 1;
-    updateBadge();
-
-    btn?.addEventListener('click', openLevels);
-    close?.addEventListener('click', closeLevels);
-    luOk?.addEventListener('click', closeLevelUp);
-
-    observeCounters();
-    addTapBonusOnce();
-    checkUnlocks(); // first pass
-  }
-
-  if (document.readyState !== 'loading') init();
-  else document.addEventListener('DOMContentLoaded', init);
-
-  // expose for debugging if needed
-  window.Levels = { state, checkUnlocks };
-})();
 
 /* ===== Snake ===== */
 const snakeGridEl = document.getElementById('snakeGrid'); let S=null, sLoop=null;
