--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,12 @@ canvas{ display:block }
     <div class="bottom" id="bottom">
       <div class="controls">
         <div class="tile play" id="playBtn">Play<br>Games</div>
-        <div class="tile level" id="levelBtn"><div><div style="font-size:12px;color:#9aa3ab">Level</div><div id="levelText" style="font-weight:900;font-size:18px">OFF</div></div></div>
+        <!-- ===== LEVEL TILE (keeps your IDs) ===== -->
+<div class="tile level lv-tile" id="levelBtn" role="button" aria-label="Open levels">
+  <div class="lv-badge-ring">
+    <img id="levelBadge" src="img/level1.png" alt="Current level" loading="lazy">
+  </div>
+</div>
         <div class="tile buy" id="buyBtn">Buy<br>Cards</div>
       </div>
     </div>
@@ -1931,7 +1936,7 @@ document.getElementById('buyBtn')?.addEventListener('click', ()=>{
   if(!state?.name || typeof state.avatarIdx!=='number'){ showToast('Choose username & profile first.'); ensureFirstRunFlow(); return; }
   openOverlay('buyOverlay');
 }, {passive:true});
-
+document.getElementById('levelBtn')?.addEventListener('click', ()=> showToast('Level is OFF for now ✨'), {passive:true});
 
 /* ===== Name & Avatar ===== */
 function setUserPill(name, avatarIdx){
