--- a/index.html
+++ b/index.html
@@ -1276,12 +1276,7 @@ canvas{ display:block }
     <div class="bottom" id="bottom">
       <div class="controls">
         <div class="tile play" id="playBtn">Play<br>Games</div>
-        <!-- ===== LEVEL TILE (keeps your IDs) ===== -->
-<div class="tile level lv-tile" id="levelBtn" role="button" aria-label="Open levels">
-  <div class="lv-badge-ring">
-    <img id="levelBadge" src="img/level1.png" alt="Current level" loading="lazy">
-  </div>
-</div>
+        <div class="tile level" id="levelBtn"><div><div style="font-size:12px;color:#9aa3ab">Chadi</div><div id="levelText" style="font-weight:900;font-size:18px">Lize</div></div></div>
         <div class="tile buy" id="buyBtn">Buy<br>Cards</div>
       </div>
     </div>
